# to-do_pet_cpp

./: .gitignore  README.md  docker-compose.yml
backend/: CMakeLists.txt  Dockerfile
backend/src/: main.cpp
backend/src/database/: database.cpp  database.h
backend/src/handlers/: handlers.cpp  handlers.h
db/: init.sql
frontend/: Dockerfile.frontend  app.js  index.html  nginx.conf  styles.css
